--- a/static/style.css
+++ b/static/style.css
@@ -50,6 +50,17 @@ a {
     font-size: 3rem;
 }
 
+.board_title .search_input {
+    height: 30px;
+    width: 30%;
+    margin-left: 350px;
+}
+.board_title .search_btn {
+    height: 35px;
+    width: 35px;
+    
+}
+
 .board_title p {
     margin-top: 5px;
     font-size: 1.4rem;
@@ -121,7 +132,7 @@ a {
 }
 
 .board_list .title {
-    width: 70%;
+    width: 60%;
     text-align: left;
 }
 
@@ -134,6 +145,9 @@ a {
 }
 
 .board_list .date {
+    width: 10%;
+}
+.board_list .like {
     width: 10%;
 }
 
